<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fitsSystemWindows="true"
        tools:context=".login_screen.LoginFragment">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/app_icon_text"
            android:src="@drawable/icon_organized"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline_top" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input"
            style="@style/Theme.Organized.TextInputLayout.OutlineBox.White"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.9"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:hint="@string/hint_email"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_image"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input"
            style="@style/Theme.Organized.TextInputLayout.OutlineBox.White"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.9"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:hint="@string/hint_password"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_input"
            app:startIconDrawable="@drawable/ic_password"
            app:startIconTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/error_login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/email_password_wrong"
            android:textColor="@color/text_color_error"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="16sp"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeStepGranularity="2sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_input" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/email_sign_in"
            style="@style/Theme.Organized.Button.Login.White"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.8"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textSize="16sp"
            android:autoSizeMinTextSize="16sp"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeStepGranularity="4sp"
            android:layout_weight="1"
            android:text="@string/sign_in_email"
            android:textColor="@color/black"
            app:cornerRadius="10dp"
            app:icon="@drawable/ic_email"
            app:iconPadding="5dp"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/sign_up_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/error_login_text" />

        <TextView
            android:id="@+id/sign_up_text"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.8"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/dont_have_account"
            android:textColor="@color/text_color"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="16sp"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeStepGranularity="2sp"
            app:layout_constraintTop_toBottomOf="@+id/email_sign_in"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <Button
            android:id="@+id/sign_up_button"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="0dp"
            app:layout_goneMarginBottom="10dp"
            app:layout_constraintWidth_percent="0.4"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="16sp"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeStepGranularity="4sp"
            android:text="@string/sign_up"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/sign_up_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/sign_up_text"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_text"
            />


        <View
            android:id="@+id/line_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/methods_text"
            app:layout_constraintStart_toStartOf="@+id/methods_text"
            app:layout_constraintTop_toTopOf="@id/methods_text" />
        <TextView
            android:id="@+id/methods_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:background="@color/colorPrimary"
            android:padding="8dp"
            android:text="@string/other_login_way"
            android:textColor="@color/white"
            android:gravity="center"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="16sp"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeStepGranularity="2sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/google_sign_in"
            style="@style/Theme.Organized.Button.Login.White"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.8"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/login_google"
            android:textColor="@color/black"
            app:cornerRadius="10dp"
            app:icon="@drawable/googleg_standard_color_18"
            app:iconPadding="10dp"
            app:iconTint="#00100D0D"
            app:iconTintMode="src_atop"
            android:textSize="16sp"
            android:autoSizeMinTextSize="16sp"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeStepGranularity="4sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/methods_text"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/phone_sign_in"
            style="@style/Theme.Organized.Button.Login.White"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.8"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/login_phone_number"
            android:textColor="@color/black"
            app:cornerRadius="10dp"
            app:icon="@drawable/ic_phone"
            app:iconPadding="5dp"
            app:iconTint="@color/black"
            android:textSize="16sp"
            android:autoSizeMinTextSize="16sp"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeStepGranularity="4sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/google_sign_in"
            app:layout_constraintBottom_toTopOf="@id/anonymous_sign_in" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/anonymous_sign_in"
            style="@style/Theme.Organized.Button.Login.White"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.8"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/login_anonymous"
            android:textColor="@color/black"
            app:cornerRadius="10dp"
            app:icon="@drawable/ic_person"
            app:iconPadding="2dp"
            app:iconSize="26dp"
            app:iconTint="@color/black"
            android:textSize="16sp"
            android:autoSizeMinTextSize="16sp"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeStepGranularity="4sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_sign_in"
            app:layout_constraintBottom_toTopOf="@id/guideline_bottom"/>

        <include
            android:id="@+id/progress_bar"
            android:visibility="invisible"
            layout="@layout/progress_bar" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".03" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".93" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>